fix: avoid overflow on laptop screen and on all screen sizes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,5 @@ body {
   height: 100%;
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  overflow: hidden;
 }
